Fix efek mask flicker saat buka menu

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1105,8 +1105,12 @@ div, span, a
 	-webkit-transition: 0.3s;
 	transition: 0.3s;
 	transform: translateZ(0);
-	-webkit-perspective: 1000;
-	-webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
 .usermenu-item.active .usermenu-item-detail:after
 {
